syntax = "proto3";

message ImageRequest {
  bytes image = 1;
}

message ProgressResponse {
  oneof data {
    int32 progress = 1;
    bytes processedImage = 2;
  }
}

service ImageGrayscaleService {
  rpc UploadImage(stream ImageRequest) returns (stream ProgressResponse);
}